db-service.yaml
#create service.yaml for db
apiVersion: v1
kind: Service 
metadata:
  name: db-service
spec:
  selector:
    app: app-database
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
